# rerum

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
cli/: index.html
docs/: api-reference.md  cli.md  dsl-reference.md  equivalence.md  examples.md  getting-started.md  index.md
dsl-reference/: index.html
examples/: ac_demo.rules  ac_demo.theory.json  acunify_demo.rules  algebra.rules  arithmetic.theory.json  boolean.manifest  boolean.metadata.json  boolean.rules  boolean.theory.json  calculus.rules  calculus_checker.py  custom_prelude.py  demo.py  demo.rerum  differentiation.manifest  differentiation.metadata.json  differentiation.rules  index.html  integration.metadata.json  integration.rules  limits.metadata.json  limits.rules  limits_fold_ops.py  narrowing_demo.rules  number_theory.rules  peano.metadata.json  peano.rules  sets.metadata.json  sets.rules  sets.theory.json  ski.metadata.json  ski.rules
examples/search/: integration.metadata.json  limits_fold_ops.py
experiments/: README.md  byparts_search.py  features_benchmark.py  scaling.py
getting-started/: index.html
rerum/: __init__.py  acmatch.py  acunify.py  cli.py  completion.py  confluence.py  engine.py  expr.py  hooks.py  manifest.py  narrowing.py  normalize.py  numeval.py  optimize.py  rewriter.py  solve.py  termination.py  trace.py  training.py
rerum/mcp/: __init__.py  errors.py  persistence.py  registry.py  server.py  solver.py  tools.py  trace.py  utils.py
rerum/tests/: __init__.py  conftest.py  test_acmatch.py  test_acunify.py  test_bidirectional.py  test_bindings.py  test_boolean.py  test_byparts_experiment.py  test_calculus_checker_d2.py  test_cli.py  test_completion.py  test_confluence.py  test_differentiation.py  test_dsl_metadata.py  test_engine_methods.py  test_equivalence_class.py  test_equivalents.py  test_examples_validation.py  test_expr_builder.py  (+45 more)
search/: search_index.json
(+38 files in other folders)
