[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rerum"
version = "0.4.0"
description = "RERUM - Rewriting Expressions via Rules Using Morphisms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "spinoza" },
]
keywords = [
    "symbolic",
    "rewriting",
    "pattern-matching",
    "term-rewriting",
    "s-expressions",
    "dsl",
    "symbolic-computation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
rerum = "rerum.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/rerum"
Documentation = "https://queelius.github.io/rerum"
Repository = "https://github.com/queelius/rerum"
Issues = "https://github.com/queelius/rerum/issues"
Changelog = "https://github.com/queelius/rerum/releases"

[tool.hatch.build.targets.wheel]
packages = ["rerum"]

[tool.pytest.ini_options]
testpaths = ["rerum/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["rerum"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
